--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 os_pipe = { version = "1.1.3", features = ["io_safety"] }
+parking_lot = { version = "0.12.1", features = ["send_guard"] }
 
 [dev-dependencies]
-parking_lot = { version = "0.12.1", features = ["send_guard"] }
+libc = "0.2.140"
